// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases !important groups: classes 1`] = `
Set {
  "mt-10",
  "pt-10",
  "!hover:m-2",
  "!hover:p-2",
}
`;

exports[`cases !important groups: generated-css 1`] = `
".\\\\!hover\\\\:m-2:hover {
  margin: 0.5rem !important;
}
.mt-10 {
  margin-top: 2.5rem;
}
.\\\\!hover\\\\:p-2:hover {
  padding: 0.5rem !important;
}
.pt-10 {
  padding-top: 2.5rem;
}"
`;

exports[`cases !important: classes 1`] = `
Set {
  "mt-10",
  "!m-2",
}
`;

exports[`cases !important: generated-css 1`] = `
".\\\\!m-2 {
  margin: 0.5rem !important;
}
.mt-10 {
  margin-top: 2.5rem;
}"
`;

exports[`cases conditional: classes 1`] = `
Set {
  "font-semibold",
  "font-normal",
  "block",
  "truncate",
}
`;

exports[`cases conditional: generated-css 1`] = `
".block {
  display: block;
}
.font-semibold {
  font-weight: 600;
}
.font-normal {
  font-weight: 400;
}
.truncate {
  overflow: hidden;
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  white-space: nowrap;
}"
`;

exports[`cases inline style: classes 1`] = `
Set {
  "relative",
  "top-0",
}
`;

exports[`cases inline style: generated-css 1`] = `
".relative {
  position: relative;
}
.top-0 {
  top: 0px;
}"
`;

exports[`cases leading + and numbers: classes 1`] = `
Set {
  "2xl:text-xl",
  "+lg:bg-red-900",
}
`;

exports[`cases leading + and numbers: generated-css 1`] = `
"@media (min-width: 1024px) and (max-width: 1280px) {
  .\\\\+lg\\\\:bg-red-900 {
    --tw-bg-opacity: 1;
    background-color: rgba(127, 29, 29, var(--tw-bg-opacity));
  }
}
@media (min-width: 1536px) {
  .\\\\32 xl\\\\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}"
`;

exports[`cases multiple lines: classes 1`] = `
Set {
  "p-4",
  "m-5",
}
`;

exports[`cases multiple lines: generated-css 1`] = `
".m-5 {
  margin: 1.25rem;
}
.p-4 {
  padding: 1rem;
}"
`;

exports[`cases uppercase classnames: classes 1`] = `
Set {
  "text-light-blue-500",
}
`;

exports[`cases uppercase classnames: generated-css 1`] = `
".text-light-blue-500 {
  --tw-text-opacity: 1;
  color: rgba(14, 165, 233, var(--tw-text-opacity));
}"
`;

exports[`cases utilities grouping: classes 1`] = `
Set {
  "bg-white",
  "font-light",
  "sm:hover:bg-gray-100",
  "sm:hover:font-medium",
}
`;

exports[`cases utilities grouping: classes-pending 1`] = `
Set {
  "bg-white",
  "font-light",
  "sm:hover:bg-gray-100",
  "sm:hover:font-medium",
}
`;

exports[`cases utilities grouping: generated-css 1`] = `
".bg-white {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
}
.font-light {
  font-weight: 300;
}
@media (min-width: 640px) {
  .sm\\\\:hover\\\\:bg-gray-100:hover {
    --tw-bg-opacity: 1;
    background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
  }
  .sm\\\\:hover\\\\:font-medium:hover {
    font-weight: 500;
  }
}"
`;

exports[`cases variables: classes 1`] = `
Set {
  "bg-$test-variable",
}
`;

exports[`cases variables: generated-css 1`] = `
".bg-\\\\$test-variable {
  background-color: var(--test-variable);
}"
`;
